# terminusgps-notifications

./: .buildinfo  .gitignore  Dockerfile  README.md  genindex.html  index.html  models.html  objects.inv  package-lock.json  pyproject.toml  search.html  searchindex.js
.github/workflows/: django-test.yaml  docker-build.yaml  sphinx-build.yaml
_modules/: index.html
_modules/terminusgps_notifications/: models.html
_sources/guides/: creating_an_account.rst.txt  setting_destination_phone_numbers.rst.txt
docs/source/: conf.py  index.rst  models.rst
docs/source/guides/: logging_in.rst  (+5 more)
guides/: connecting_your_wialon_account.html  creating_a_live_notification.html  creating_an_account.html  index.html  logging_in.html  setting_destination_phone_numbers.html  subscribing.html
src/: settings.py  urls.py
src/settings/: dev.py  prod.py
terminusgps_notifications/: admin.py  apps.py  constants.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py
terminusgps_notifications/forms/: __init__.py  customers.py  generic.py  main.py  notifications.py  subscriptions.py  triggers.py  units.py
terminusgps_notifications/migrations/: 0001_initial.py  0002_alter_customer_subscription.py  0002_alter_terminusgpsnotificationscustomer_subtotal.py  0002_alter_wialonnotification_name_and_more.py  0002_terminusgpsnotificationscustomer_company.py  0003_customer_max_sms_count_customer_max_voice_count_and_more.py  0003_remove_terminusgpsnotificationscustomer_resource_id_and_more.py  0003_wialonnotification_resource_name.py  0004_alter_customer_max_sms_count_and_more.py  0005_notificationaction_notificationcontrolschedule_and_more.py  (+10 more)
(+98 files in other folders)
